feat: impl e2e script
