# internal/infrastructure/grpc/internal/handler/debug/handler.go
@@ -19,6 +19,16 @@ func NewDebugHandler(
 	}
 }
 
+func (h *DebugHandler) CreateAdminIDToken(ctx context.Context, req *debug_apiv1.CreateAdminIDTokenRequest) (*debug_apiv1.CreateAdminIDTokenResponse, error) {
+	idToken, err := h.debugInteractor.CreateAdminIDToken(ctx, req.GetAuthUid(), req.GetPassword())
+	if err != nil {
+		return nil, err
+	}
+	return &debug_apiv1.CreateAdminIDTokenResponse{
+		IdToken: idToken,
+	}, nil
+}
+
 func (h *DebugHandler) CreateStaffIDToken(ctx context.Context, req *debug_apiv1.CreateStaffIDTokenRequest) (*debug_apiv1.CreateStaffIDTokenResponse, error) {
 	idToken, err := h.debugInteractor.CreateStaffIDToken(ctx, req.GetAuthUid(), req.GetPassword())
 	if err != nil {
@@ -26,5 +36,18 @@ func (h *DebugHandler) CreateStaffIDToken(ctx context.Context, req *debug_apiv1.
 	}
 	return &debug_apiv1.CreateStaffIDTokenResponse{
 		IdToken: idToken,
+	}, nil
+}
+
+func (h *DebugHandler) CreateStaffAuthUID(
+	ctx context.Context,
+	req *debug_apiv1.CreateStaffAuthUIDRequest,
+) (*debug_apiv1.CreateStaffAuthUIDResponse, error) {
+	authUID, err := h.debugInteractor.CreateStaffAuthUID(ctx, req.GetEmail(), req.GetPassword())
+	if err != nil {
+		return nil, err
+	}
+	return &debug_apiv1.CreateStaffAuthUIDResponse{
+		AuthUid: authUID,
 	}, nil
 }
